Remove in development stuff and clean up a bit more

--- a/ubuntu/asterisk/freepbx/root/etc/asterisk/extensions_custom.conf
+++ b/ubuntu/asterisk/freepbx/root/etc/asterisk/extensions_custom.conf
@@ -9,22 +9,23 @@
 
 [from-internal-custom]
 ;exten => 776,1,MeetMe(997|q)
+
 exten => 666,1,Answer
 ;exten => 666,n,Playback(/var/lib/asterisk/sounds/pluto/pluto-goodbye,skip)
 exten => 666,n,Goto(pluto-security-custom,s,1)
 exten => 666,n,Hangup
+
 exten => 997,1,Answer
 exten => 997,n,Wait(1)
 exten => 997,n,Set(TIMEOUT(absolute)=150) 
 exten => 997,n,MeetMe(997|q)
 exten => 997,n,Hangup
+
 exten => 998,1,Goto(pluto-console-custom,s,1)
 exten => 998,n,Hangup
+
 exten => 999,1,Goto(pluto-security-custom,s,1)
 exten => 999,n,Hangup
-
-exten => 500,1,Goto(ivr-orbiter,s,1)
-exten => 500,n,Hangup
 
 [pluto-console-custom]
 exten => s,1,System(/usr/pluto/bin/MessageSend localhost -targetType category 0 8 1 192)
@@ -38,7 +39,6 @@ exten => h,n,System(killall -12 simplephone)
 exten => s,1,Answer
 exten => s,n,Wait(1)
 exten => s,n,System(/usr/pluto/bin/pluto-sos-gen.pl)
-exten => s,n,Playback(/tmp/pluto-security-voicemenu,skip)
 exten => s,n,Set(TIMEOUT(digit)=14)
 exten => s,n,Set(TIMEOUT(response)=5) 
 exten => s,n,Background(/var/lib/asterisk/sounds/pluto/pluto-security-option1)
@@ -56,15 +56,15 @@ exten => 2,1,Playback(/var/lib/asterisk/sounds/pluto/pluto-security-ignore)
 exten => 2,n,Goto(#,1)
 exten => 3,1,Goto(pluto-security-sos-custom,s,1)
 exten => 4,1,NoOp("Conference is performed with custom build addon (may not work)")
-exten => 4,2,System(/usr/pluto/bin/pluto-sos-neighbor.pl)
-exten => 4,3,Dial(Local/997@trusted/n)
-exten => 4,4,Goto(#,1)
+exten => 4,n,System(/usr/pluto/bin/pluto-sos-neighbor.pl)
+exten => 4,n,Dial(Local/997@trusted/n)
+exten => 4,n,Goto(#,1)
 exten => 5,1,NoOp("Speak in the house")
-exten => 5,2,Dial(Local/998@trusted/n)
-exten => 5,3,Goto(#,1)
-exten => #,1,Goto(t,5)
+exten => 5,n,Dial(Local/998@trusted/n)
+exten => 5,n,Goto(#,1)
+exten => #,1,Goto(t,2)
 exten => i,1,Background(pluto/invalid-entry)
-exten => i,n,Goto(s,1)
+exten => i,n,Goto(s,4)
 
 ;sos calls submenu
 [pluto-security-sos-custom]
@@ -91,5 +91,4 @@ exten => 4,n,Hangup
 exten => #,1,Goto(pluto-security-custom,s,4)
 
 exten => i,1,Background(pluto/invalid-entry)
-exten => i,n,Goto(s,1)
-
+exten => i,n,Goto(s,4)
