Refs: #745 Adding support for making announcements to phones via Asterisk Manager API

--- a/src/Asterisk/Makefile
+++ b/src/Asterisk/Makefile
@@ -38,6 +38,7 @@ sources += \
 	tokenpool.cpp \
 	logincommand.cpp \
 	originatecommand.cpp \
+	applicationcommand.cpp \
 	hangupcommand.cpp \
 	transfercommand.cpp \
 	iaxextensionsstatuscommand.cpp \
