add x86 compilation option in addition to arm

--- a/src/WindowsCE/Makefile
+++ b/src/WindowsCE/Makefile
@@ -1,20 +1,37 @@
-all: cegcc libs bins
-install: all
-	mkdir -p TabletOrbiter
-	cp -a OrbiterCE/OrbiterCE.exe OrbiterCE/WaitCursor OrbiterCE/*.png OrbiterCE/OrbiterCE.ini TabletOrbiter
-	cp zlib-1.2.5/zlib1.dll libpng-1.4.3/libpng14.dll jpeg-6b-src/src/jpeg-6b-src/jpeg62.dll TabletOrbiter
-	cp /opt/mingw32ce/bin/libgcc_s_sjlj-1.dll /opt/mingw32ce/arm-mingw32ce/bin/mingwm10.dll TabletOrbiter
+export PATH:=/opt/mingw32ce/bin:/opt/x86mingw32ce/bin:${PATH}
 
-cegcc:
-	make -f CEGCC.mk
+default:
+	@echo "Available targets:"
+	@echo "    all-arm"
+	@echo "    all-x86"
+	
+all-arm: cegcc-arm
+	make CROSS=arm-mingw32ce- DESTDIR=TouchOrbiter/arm libs bins install-files
+	cp /opt/mingw32ce/bin/libgcc_s_sjlj-1.dll /opt/mingw32ce/arm-mingw32ce/bin/mingwm10.dll TouchOrbiter/arm
+all-x86: cegcc-x86
+	make CROSS=i386-mingw32ce- DESTDIR=TouchOrbiter/x86 libs bins install-files
+	cp /opt/x86mingw32ce/bin/libgcc_s_sjlj-1.dll /opt/x86mingw32ce/i386-mingw32ce/bin/mingwm10.dll TouchOrbiter/x86
 
-export PATH:=/opt/mingw32ce/bin:${PATH}
+install-files:
+	if [[ -z "$(DESTDIR)" ]]; then \
+		false; \
+	fi
+	mkdir -p "$(DESTDIR)"
+	cp -af OrbiterCE/OrbiterCE.exe OrbiterCE/WaitCursor OrbiterCE/*.png OrbiterCE/OrbiterCE.ini "$(DESTDIR)"
+	cp zlib-1.2.5/zlib1.dll libpng-1.4.3/libpng14.dll jpeg-6b-src/src/jpeg-6b-src/jpeg62.dll "$(DESTDIR)"
+	find "$(DESTDIR)" -type d -name .svn -exec rm -rf '{}' ';' -prune
+
+cegcc-arm:
+	make -f CEGCC.mk cegcc/build/mingw32ce/.compiled
+
+cegcc-x86:
+	make -f CEGCC.mk cegcc/build/x86mingw32ce/.compiled
 
 libs: zlib-1.2.5/zlib1.dll libpng-1.4.3/libpng14.dll jpeg-6b-src/src/jpeg-6b-src/jpeg62.dll
 bins: OrbiterCE/OrbiterCE.exe
 
 OrbiterCE/OrbiterCE.exe:
-	make -C OrbiterCE
+	make -C OrbiterCE clean OrbiterCE.exe CROSS=$(CROSS)
 
 zlib-1.2.5: zlib-1.2.5.tar.bz2
 	tar -xjf zlib-1.2.5.tar.bz2 || (rm -rf $@ || /bin/false)
@@ -30,6 +47,7 @@ libpng-1.4.3/libpng14.dll: libpng-1.4.3
 
 jpeg-6b-src: jpeg-6b-src.tar.bz2
 	tar -xjf jpeg-6b-src.tar.bz2 || (rm -rf $@ || /bin/false)
+	cp libjpeg.mingw32ce.mk jpeg-6b-src/src/jpeg-6b-src/Makefile
 	touch $@
 jpeg-6b-src/src/jpeg-6b-src/jpeg62.dll: jpeg-6b-src
 	cd jpeg-6b-src/src && make -f ../release/Makefile compilation
@@ -44,8 +62,11 @@ libpng-1.4.3.tar.bz2:
 	wget 'http://downloads.sourceforge.net/project/libpng/01-libpng-master/1.4.3/libpng-1.4.3.tar.bz2?use_mirror=mesh&ts=1279829417' \
 		|| (rm -f $@ && /bin/false)
 
-clean dist-clean:
-	rm -rf zlib-1.2.5* libpng-1.4.3* jpeg-6b-src/* cegcc
+clean:
+	rm -rf zlib-1.2.5 libpng-1.4.3 jpeg-6b-src
 	make -C OrbiterCE clean
+dist-clean: clean
+	rm -rf zlib-1.2.5* libpng-1.4.3* jpeg-6b-src*
+	rm -rf cegcc
 
-.PHONY: all cegcc libs bins install
+.PHONY: default cegcc libs bins install clean dist-clean
