--- a/src/WindowsCE/OrbiterCE/Makefile
+++ b/src/WindowsCE/OrbiterCE/Makefile
@@ -6,18 +6,16 @@ CFLAGS=-W -Wall
 LDFLAGS=-L$(BaseDir)/zlib-1.2.5 -L$(BaseDir)/libpng-1.4.3 -L$(BaseDir)/jpeg-6b-src/src/jpeg-6b-src
 LDLIBS=-lpng -lz -lcommctrl -lws2 -laygshell -limgdecmp -ljpeg
 
-export PATH:=/opt/mingw32ce/bin:${PATH}
-
 %.rsc: %.rc
-	arm-mingw32ce-windres $< $@
+	$(CROSS)windres $< $@
 
 %.o: %.c
-	arm-mingw32ce-gcc $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
+	$(CROSS)gcc $(CPPFLAGS) $(CFLAGS) -c -o $@ $<
 
 Objects=OrbiterCE.o OrbiterCE.rsc PngFile.o JpegFile.o ProxyOrbiter.o TransformBitmap.o WaitingCursor.o IniFile.o
 
 OrbiterCE.exe: $(Objects)
-	arm-mingw32ce-gcc $(CFLAGS) -o $@ $+ $(LDFLAGS) $(LDLIBS)
+	$(CROSS)gcc $(CFLAGS) -o $@ $+ $(LDFLAGS) $(LDLIBS)
 
 clean:
 	rm -f OrbiterCE.exe *.o *.rsc
