--- a/src/UpdateEntArea/Makefile
+++ b/src/UpdateEntArea/Makefile
@@ -12,7 +12,9 @@ CPPFLAGS += -I/usr/include/mysql
 LDFLAGS += -lmysqlclient_r
 #<-mkr_B_use_mysql_wrapper_e->
 
-#
+#<-mkr_b_use_mysql_wrapper_b->
+CPPFLAGS += -DUSE_MYSQL_WRAPPER
+#<-mkr_b_use_mysql_wrapper_e->
 
 all: Main.o UpdateEntArea.o UpdateEntArea_Climate.o UpdateEntArea_Lighting.o UpdateEntArea_Media.o UpdateEntArea_Security.o UpdateEntArea_Telecom.o UpdateEntArea_Setup.o UpdateEntArea_Event.o CommandGroupArray.o Criteria.o ../CreateDevice/CreateDevice.o
 	g++ Main.o UpdateEntArea.o UpdateEntArea_Climate.o UpdateEntArea_Lighting.o UpdateEntArea_Media.o UpdateEntArea_Security.o UpdateEntArea_Telecom.o UpdateEntArea_Setup.o UpdateEntArea_Event.o CommandGroupArray.o Criteria.o ../CreateDevice/CreateDevice.o -o UpdateEntArea $(LDFLAGS) $(LDLIBS)
