--- a/src/UbuntuDiskless/files.d/apt.conf
+++ b/src/UbuntuDiskless/files.d/apt.conf
@@ -5,32 +5,40 @@ set -e
 . ./filesd-parms.sh $@
 
 ## Config for nis to act as a client
-File="/etc/apt/apt.conf.d/00pluto"
+
+# Use apt proxy settings from the core
+File="/etc/apt/apt.conf.d/02proxy"
 mkdir -p "${Parm_RootLocation}/$(dirname $File)"
+cp "${File}" "${Parm_RootLocation}/${File}"
 
-Content=""
-Content="${Content}Apt::Cache-Limit \"33554432\";\n"
-Content="${Content}Dpkg::Options { \"--force-confold\"; };\n"
-Content="${Content}Acquire::http::timeout \"10\";\n"
-Content="${Content}Acquire::ftp::timeout \"10\";\n"
-Content="${Content}APT::Get::AllowUnauthenticated \"true\";\n"
-Content="${Content}APT::Get::force-yes \"true\";\n"
-echo -e "$Content" > "${Parm_RootLocation}/${File}"
+# Use apt settings from the core
+File="/etc/apt/apt.conf.d/30pluto"
+mkdir -p "${Parm_RootLocation}/$(dirname $File)"
+#Content=""
+#Content="${Content}Apt::Cache-Limit \"33554432\";\n"
+#Content="${Content}Dpkg::Options { \"--force-confold\"; };\n"
+#Content="${Content}Acquire::http::timeout \"10\";\n"
+#Content="${Content}Acquire::ftp::timeout \"10\";\n"
+#Content="${Content}APT::Get::AllowUnauthenticated \"true\";\n"
+#Content="${Content}APT::Get::force-yes \"true\";\n"
+#echo -e "$Content" > "${Parm_RootLocation}/${File}"
+cp "${File}" "${Parm_RootLocation}/${File}"
 
-
-
+# Use apt/preferences from the core
 File="/etc/apt/preferences"
 mkdir -p "${Parm_RootLocation}/$(dirname $File)"
-Content=""
-Content="${Content}Package: *\n"
-Content="${Content}Pin: origin\n"
-Content="${Content}Pin-Priority: 9999\n"
-Content="${Content}\n"
-Content="${Content}Package: *\n"
-Content="${Content}Pin: release v=8.10,o=Ubuntu,a=hardy,l=Ubuntu\n"
-Content="${Content}Pin-Priority: 9998\n"
-echo -e "$Content" > "${Parm_RootLocation}/${File}"
+#Content=""
+#Content="${Content}Package: *\n"
+#Content="${Content}Pin: origin\n"
+#Content="${Content}Pin-Priority: 9999\n"
+#Content="${Content}\n"
+#Content="${Content}Package: *\n"
+#Content="${Content}Pin: release v=8.10,o=Ubuntu,a=hardy,l=Ubuntu\n"
+#Content="${Content}Pin-Priority: 9998\n"
+#echo -e "$Content" > "${Parm_RootLocation}/${File}"
+cp "${File}" "${Parm_RootLocation}/${File}"
 
+# Unless this is a FiireStation use the core's sources.list
 if [[ "$Parm_Template" != 1893 ]]; then
 	File="/etc/apt/sources.list"
 	mkdir -p "${Parm_RootLocation}/$(dirname $File)"
