Refs #752 - diff committed

--- a/src/UbuntuDiskless/files.d/apt.conf
+++ b/src/UbuntuDiskless/files.d/apt.conf
@@ -6,11 +6,6 @@ set -e
 
 ## Config for nis to act as a client
 
-# Use apt proxy settings from the core
-File="/etc/apt/apt.conf.d/02proxy"
-mkdir -p "${Parm_RootLocation}/$(dirname $File)"
-cp "${File}" "${Parm_RootLocation}/${File}"
-
 # Use apt settings from the core
 File="/etc/apt/apt.conf.d/30pluto"
 mkdir -p "${Parm_RootLocation}/$(dirname $File)"
@@ -22,7 +17,7 @@ mkdir -p "${Parm_RootLocation}/$(dirname $File)"
 #Content="${Content}APT::Get::AllowUnauthenticated \"true\";\n"
 #Content="${Content}APT::Get::force-yes \"true\";\n"
 #echo -e "$Content" > "${Parm_RootLocation}/${File}"
-cp "${File}" "${Parm_RootLocation}/${File}"
+[[ -f "${File}" ]] && cp "${File}" "${Parm_RootLocation}/${File}"
 
 # Use apt/preferences from the core
 File="/etc/apt/preferences"
@@ -36,11 +31,11 @@ mkdir -p "${Parm_RootLocation}/$(dirname $File)"
 #Content="${Content}Pin: release v=8.10,o=Ubuntu,a=hardy,l=Ubuntu\n"
 #Content="${Content}Pin-Priority: 9998\n"
 #echo -e "$Content" > "${Parm_RootLocation}/${File}"
-cp "${File}" "${Parm_RootLocation}/${File}"
+[[ -f "${File}" ]] && cp "${File}" "${Parm_RootLocation}/${File}"
 
 # Unless this is a FiireStation use the core's sources.list
 if [[ "$Parm_Template" != 1893 ]]; then
 	File="/etc/apt/sources.list"
 	mkdir -p "${Parm_RootLocation}/$(dirname $File)"
-	cp "${File}" "${Parm_RootLocation}/${File}"
+	[[ -f "${File}" ]] && cp "${File}" "${Parm_RootLocation}/${File}"
 fi
