Fixes #881 - right now 32 bit is always set, and the deprecated GTK macro is replaced with proper code.

--- a/ubuntu/mame/makefile
+++ b/ubuntu/mame/makefile
@@ -197,7 +197,7 @@ endif
 #-------------------------------------------------
 
 # uncomment next line if you are building for a 64-bit target
-# PTR64 = 1
+PTR64 = 0
 
 # uncomment next line if you are building for a big-endian target
 # BIGENDIAN = 1
