Refs #906 add required file to build

--- a/src/Media_Plugin/Makefile
+++ b/src/Media_Plugin/Makefile
@@ -42,7 +42,8 @@ sources += \
 	BoundRemote.cpp \
 	Generic_NonPluto_Media.cpp \
 	MediaHandlerBase.cpp \
-	PlaylistParser.cpp
+	PlaylistParser.cpp \
+	../PlutoUtils/HttpUtils.cpp
 
 #<-dceag-mf-b->!
 LDLIBS_NAMES = $(INTERNAL_LIBS_NAMES) $(EXTERNAL_LIBS_NAMES)
