--- a/ubuntu/asterisk/add/debian-ubuntu/control
+++ b/ubuntu/asterisk/add/debian-ubuntu/control
@@ -7,6 +7,7 @@ Standards-Version: 3.6.1
 
 Package: asterisk-pluto
 Architecture: any
-Depends: asterisk (>= 1:1.4.10~dfsg), asterisk-perl, tcpdump, traceroute, freepbx, zaptel-modules, asterisk-mysql, chan-sccp
+Depends: asterisk (>= 1:1.4.10~dfsg), asterisk-perl, tcpdump, traceroute, freepbx,
+zaptel-modules|dahdi-dkms, asterisk-mysql, chan-sccp
 Description: Pluto addons for Asterisk
  Pluto addons for Asterisk
