--- a/src/X-Resolution/xorg.conf.in
+++ b/src/X-Resolution/xorg.conf.in
@@ -7,7 +7,7 @@ EndSection
 
 Section "Files"
 #	RgbPath		"/usr/X11R6/lib/X11/rgb"
-	ModulePath	"/usr/lib/xorg/modules"
+	ModulePath	"/usr/lib/xorg/extra-modules,/usr/lib/xorg/modules"
 	FontPath	"/usr/share/fonts/X11"
 	FontPath	"/usr/X11R6/lib/X11/fonts/misc/"
 	FontPath	"/usr/X11R6/lib/X11/fonts/Speedo/"
