--- a/src/OneWire/OneWire.vcproj
+++ b/src/OneWire/OneWire.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="1Wire"
+	Name="OneWire"
 	ProjectGUID="{BFB764EC-A94C-414F-AE25-7EECDFEE8BBA}"
 	Keyword="Win32Proj">
 	<Platforms>
@@ -33,11 +33,11 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="pthreadVC.lib wsock32.lib DCE.lib"
-				OutputFile="../Debug/1Wire.exe"
+				OutputFile="../Debug/OneWire.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="../../libs/Libraries/pthreads-win32/lib;../lib"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/1Wire.pdb"
+				ProgramDatabaseFile="$(OutDir)/OneWire.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
@@ -86,7 +86,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="pthreadVC.lib wsock32.lib DCE-r.lib"
-				OutputFile="../bin/1Wire.exe"
+				OutputFile="../bin/OneWire.exe"
 				AdditionalLibraryDirectories="../../libs/Libraries/pthreads-win32/lib;../lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
@@ -126,10 +126,10 @@
 				RelativePath="Main.cpp">
 			</File>
 			<File
-				RelativePath="1Wire.cpp">
+				RelativePath="OneWire.cpp">
 			</File>
 			<File
-				RelativePath="..\Gen_Devices\1WireBase.cpp">
+				RelativePath="..\Gen_Devices\OneWireBase.cpp">
 			</File>
 		</Filter>
 		<Filter
@@ -139,7 +139,7 @@
 				RelativePath="..\DCE\DCEDeviceData_Impl.h">
 			</File>
 			<File
-				RelativePath="1Wire.h">
+				RelativePath="OneWire.h">
 			</File>
 		</Filter>
 		<Filter
