--- a/src/OneWire/OneWire_DLL.vcproj
+++ b/src/OneWire/OneWire_DLL.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="7.10"
-	Name="1Wire"
+	Name="OneWire"
 	ProjectGUID="{BFB764EC-A94C-414F-AE25-7EECDFEE8BBA}"
 	Keyword="Win32Proj">
 	<Platforms>
@@ -33,12 +33,12 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="pthreadVC.lib wsock32.lib DCE.lib"
-				OutputFile="../Debug/1Wire.dll"
+				OutputFile="../Debug/OneWire.dll"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="../../libs/Libraries/pthreads-win32/lib;../lib"
-				ModuleDefinitionFile="1Wire.def"
+				ModuleDefinitionFile="OneWire.def"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/1Wire.pdb"
+				ProgramDatabaseFile="$(OutDir)/OneWire.pdb"
 				SubSystem="1"
 				TargetMachine="1"/>
 			<Tool
@@ -87,10 +87,10 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="pthreadVC.lib wsock32.lib DCE-r.lib"
-				OutputFile="../bin/1Wire.dll"
+				OutputFile="../bin/OneWire.dll"
 				AdditionalLibraryDirectories="../../libs/Libraries/pthreads-win32/lib;../lib"
 				LinkIncremental="1"
-				ModuleDefinitionFile="1Wire.def"
+				ModuleDefinitionFile="OneWire.def"
 				GenerateDebugInformation="TRUE"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -128,13 +128,13 @@
 				RelativePath="Main.cpp">
 			</File>
 			<File
-				RelativePath="1Wire.cpp">
+				RelativePath="OneWire.cpp">
 			</File>
 			<File
-				RelativePath="1Wire.def">
+				RelativePath="OneWire.def">
 			</File>
 			<File
-				RelativePath="..\Gen_Devices\1WireBase.cpp">
+				RelativePath="..\Gen_Devices\OneWireBase.cpp">
 			</File>
 		</Filter>
 		<Filter
@@ -144,7 +144,7 @@
 				RelativePath="..\DCE\DCEDeviceData_Impl.h">
 			</File>
 			<File
-				RelativePath="1Wire.h">
+				RelativePath="OneWire.h">
 			</File>
 		</Filter>
 		<Filter
