--- a/external/owfs-2.8p5/module/owcapi/src/example++/Makefile
+++ b/external/owfs-2.8p5/module/owcapi/src/example++/Makefile
@@ -1,7 +1,7 @@
 # Makefile for owcapi example program -- invoked separately from this directory
 # $Id: Makefile.in,v 1.2 2009/03/24 17:20:09 alfille Exp $
 
-CXXFLAGS = -g -I/opt/owfs/include -Wno-deprecated
+CXXFLAGS = -g -I/usr/include -Wno-deprecated
 
 OBJS = owcapiexample.o
 
@@ -10,7 +10,7 @@ all:	owcapiexample
 ifeq "$(shell uname)" "Darwin"
 
 # Compile-flags for MacOSX
-DARWINLDFLAGS = -L/opt/owfs/lib -lowcapi -low -L/usr/lib -lusb
+DARWINLDFLAGS = -L/usr/lib -lowcapi -low -L/usr/lib -lusb
 
 owcapiexample: $(OBJS)
 	gcc $(CFLAGS) -o $@ $(OBJS) $(DARWINLDFLAGS)
@@ -18,7 +18,7 @@ owcapiexample: $(OBJS)
 else
 
 # Compile-flags for Linux and Cygwin
-LDFLAGS = -L/opt/owfs/lib -Wl,--rpath -Wl,/opt/owfs/lib -lowcapi
+LDFLAGS = -L/usr/lib -Wl,--rpath -Wl,/usr/lib -lowcapi
 
 owcapiexample: $(OBJS)
 	gcc $(CFLAGS) -o $@ $(OBJS) $(LDFLAGS) -lstdc++
