--- a/external/owfs-2.8p5/module/owcapi/src/example/Makefile
+++ b/external/owfs-2.8p5/module/owcapi/src/example/Makefile
@@ -1,7 +1,7 @@
 # Makefile for owcapi example program -- invoked separately from this directory
 # $Id: Makefile.in,v 1.11 2009/03/24 17:20:08 alfille Exp $
 
-CFLAGS = -g -I/opt/owfs/include
+CFLAGS = -g -I/usr/include
 
 OBJS = owcapiexample.o
 
@@ -10,7 +10,7 @@ all:	owcapiexample
 ifeq "$(shell uname)" "Darwin"
 
 # Compile-flags for MacOSX
-DARWINLDFLAGS = -L/opt/owfs/lib -lowcapi -low -L/usr/lib -lusb
+DARWINLDFLAGS = -L/usr/lib -lowcapi -low -L/usr/lib -lusb
 
 owcapiexample: $(OBJS)
 	gcc $(CFLAGS) -o $@ $(OBJS) $(DARWINLDFLAGS)
@@ -18,7 +18,7 @@ owcapiexample: $(OBJS)
 else
 
 # Compile-flags for Linux and Cygwin
-LDFLAGS = -L/opt/owfs/lib -Wl,--rpath -Wl,/opt/owfs/lib -lowcapi
+LDFLAGS = -L/usr/lib -Wl,--rpath -Wl,/usr/lib -lowcapi
 
 owcapiexample: $(OBJS)
 	gcc $(CFLAGS) -o $@ $(OBJS) $(LDFLAGS)
@@ -26,7 +26,7 @@ owcapiexample: $(OBJS)
 endif
 
 %.o: %.c
-	gcc $(CFLAGS) -c -o $@ $<
+	i486-linux-gnu-gcc $(CFLAGS) -c -o $@ $<
 
 clean:
 	$(RM) -f owcapiexample *.o *~ .~ Makefile
