Refs #1084 - some code committed toward the cause, but I have to figure out how the fuck I am going to map it to the XK_ events. damn.

--- a/src/Game_Player/Makefile
+++ b/src/Game_Player/Makefile
@@ -19,9 +19,9 @@ Gen_Dev_Files = $(GENDEV)/Game_PlayerBase.cpp
 sources = Main.cpp Game_Player.cpp $(Gen_Dev_Files)
 #<-dceag-mh-e->
 
-CXXFLAGS +=
-CPPFLAGS +=
-LDFLAGS +=  -lX11 -lXmu -lXtst -lWindowUtils -lmysqlclient_r -lpthread
+CXXFLAGS += 
+CPPFLAGS += `pkg-config libxml-2.0 --cflags`
+LDFLAGS +=  -lX11 -lXmu -lXtst -lWindowUtils -lmysqlclient_r -lpthread `pkg-config libxml-2.0 --libs`
 XTRALDLIBS =
 
 Gen_Dev_Files +=
