--- a/src/designer.MySql/HADesigner/HADesigner.csproj
+++ b/src/designer.MySql/HADesigner/HADesigner.csproj
@@ -92,13 +92,10 @@
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
-    <ProjectReference Include="..\HAData\HAData.csproj">
-      <Name>HAData</Name>
-      <Project>{C5679AE5-F8FF-451F-A97B-EA58F93B04AF}</Project>
-    </ProjectReference>
     <Reference Include="MySql.Data, Version=6.1.3.0, Culture=neutral, PublicKeyToken=20449f9ba87f7ae2">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\..\usr\lib\cli\MySql.Data-6.1\MySql.Data.dll</HintPath>
+      <Package>mysql-connector-net</Package>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -263,4 +260,10 @@
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HAData\HAData.csproj">
+      <Project>{C5679AE5-F8FF-451F-A97B-EA58F93B04AF}</Project>
+      <Name>HAData</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
