Fixes #679 - Addition of GTK Prompt Windows and Progress dialogs. They Look Much Better(tm) Now.

--- a/src/Orbiter/Makefile
+++ b/src/Orbiter/Makefile
@@ -1,7 +1,7 @@
 #<-dceag-mh-b->
 GENDEV=../Gen_Devices
 
-SNR_CPPFLAGS ?= -DKDE_LMCE -DDEBUG -DTHREAD_LOG -DLOG_ALL_QUERIES
+SNR_CPPFLAGS ?= -DUSE_GTK -DKDE_LMCE -DDEBUG -DTHREAD_LOG -DLOG_ALL_QUERIES
 SNR_LDFLAGS ?= 
 
 ROOT = ..
@@ -105,7 +105,6 @@ sources += \
 	../CreateDevice/UserUtils.cpp \
 	$(ROOT)/Splitter/TextSplitter.cpp \
 	$(ROOT)/Splitter/TextWrapper.cpp \
-	Linux/X3DButton.cpp Linux/X3DWindow.cpp Linux/XProgressWnd.cpp Linux/XPromptUser.cpp \
 	../LIRC_DCE/IRReceiverBase.cpp \
 	$(ROOT)/utilities/linux/transparency/transparency.cpp \
 
