Refs #1105 - Make freepbx provide asterisk-custom-config That way, an installation of asterisk won't overwrite existing freepbx stuff

--- a/ubuntu/asterisk/freepbx/debian/control
+++ b/ubuntu/asterisk/freepbx/debian/control
@@ -9,6 +9,7 @@ Package: freepbx
 Architecture: any
 Pre-Depends: asterisk (>= 1:1.4.10~dfsg)
 Depends: php-db, pluto-boot-scripts
+Provides: asterisk-custom-config
 Replaces: asterisk-config
 Description: FreePBX
  FreePBX
