--- a/ubuntu/asterisk/freepbx/debian/control
+++ b/ubuntu/asterisk/freepbx/debian/control
@@ -9,7 +9,7 @@ Package: freepbx
 Architecture: any
 Pre-Depends: asterisk (>= 1:1.4.10~dfsg)
 Depends: php-db, pluto-boot-scripts
-Provides: asterisk-custom-config
+Provides: asterisk-config-custom
 Replaces: asterisk-config
 Description: FreePBX
  FreePBX
