--- a/src/DCE-Whisperer/debian/control
+++ b/src/DCE-Whisperer/debian/control
@@ -1,5 +1,5 @@
 Source: dce-whisperer
-Section: unknown
+Section: dianemo
 Priority: extra
 Maintainer: root <root@unknown>
 Build-Depends: debhelper (>= 5)
@@ -7,7 +7,7 @@ Standards-Version: 3.7.2
 
 Package: dce-whisperer
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, shell-io
+Depends: ${shlibs:Depends}, ${misc:Depends}, shell-io, php5-cli
 Description: DCE interface for scripts
  DCE interface for scripts. Using a format similar to the parameters of
  MessageSend, scripts can talk to DCE, leading to faster implementation
