--- a/ubuntu/asterisk/freepbx/debian/control
+++ b/ubuntu/asterisk/freepbx/debian/control
@@ -8,6 +8,7 @@ Standards-Version: 3.6.1
 Package: freepbx
 Architecture: any
 Pre-Depends: asterisk (>= 1:1.4.10~dfsg)
+Provides: asterisk-config-custom
 Depends: php-db, pluto-boot-scripts
 Description: FreePBX
  FreePBX
