Refs #1228 - preliminary checkin of working USB Gamepad code.

--- a/src/USB_Game_Pad/Makefile
+++ b/src/USB_Game_Pad/Makefile
@@ -22,10 +22,10 @@ sources = Main.cpp USB_Game_Pad.cpp $(Gen_Dev_Files)
 CXXFLAGS +=
 CPPFLAGS +=
 LDFLAGS +=
-XTRALDLIBS = -lmysqlclient_r
+XTRALDLIBS = -lmysqlclient_r -lMessageTranslation -lIRBase 
 
 Gen_Dev_Files +=
-sources +=
+sources += ../LIRC_DCE/IRReceiverBase.cpp
 
 #<-dceag-mf-b->
 LDLIBS = $(XTRALDLIBS) $(BASELDLIBS)
@@ -44,7 +44,7 @@ USB_Game_Pad.so: $(sources:.cpp=.o)
 	cp $@ ../bin
 	chmod +x post_make.sh
 	./post_make.sh $@
-		
+
 USB_Game_Pad: $(sources:.cpp=.o)
 	$(CXX) -o $(MYNAME) $(call cpath,$+) $(LDFLAGS) $(LDLIBS)
 	cp $@ ../bin
