--- a/ubuntu/asterisk/freepbx/root/etc/asterisk/sccp.conf
+++ b/ubuntu/asterisk/freepbx/root/etc/asterisk/sccp.conf
@@ -1,48 +1,93 @@
-; (SCCP*)
+;=========================================================================================
 ;
-; An implementation of Skinny Client Control Protocol (SCCP)
+; general definitions
 ;
-; Sergio Chersovani (mlists@c-net.it)
-; http://chan-sccp.belios.de
-;
-; Supported phone types
-;    12 -- Cisco IP Phone 12SP+ (or other 12 variants)
-;    30 -- Cisco IP Phone 30VIP (or other 30 variants)
-;  7902 -- Cisco IP Phone 7902G
-;  7905 -- Cisco IP Phone 7905G
-;  7910 -- Cisco IP Phone 7910
-;  7912 -- Cisco IP Phone 7912G
-;  7935 -- Cisco IP Conference Station 7935
-;  7936 -- Cisco IP Conference Station 7936
-;  7920 -- Cisco IP Wireless Phone 7920
-;  7940 -- Cisco IP Phone 7940
-;  7960 -- Cisco IP Phone 7960
-;  7970 -- Cisco IP Phone 7970
-;  7914 -- Cisco IP Phone 7960 with a 7914 addon
-;   ata -- Cisco ATA-186 or Cisco ATA-188 (untested)
+;=========================================================================================
+
 
 [general]
-keepalive = 60               ; phone keep alive message evey 60 secs. Used to check the voicemail
-debug = 1                    ; console debug level. 1 => 10
-context = from-internal      ; default context for calls
-dateFormat = D.M.Y           ; M-D-Y in any order. Use M/D/YA (for 12h format)
-bindaddr = 192.168.80.1      ; replace with the ip address of the asterisk server (RTP important param)
-port = 2000                  ; listen on port 2000 (Skinny, default)
-disallow = all               ; First disallow all codecs
-allow = alaw                 ; Allow codecs in order of preference
-allow = ulaw                 ; 
-dnd = off                    ;
-firstdigittimeout = 30       ; dialing timeout for the 1st digit 
-digittimeout = 3             ; more digits
-autoanswer_ring_time = 1     ; ringing time in seconds for the autoanswer, the default is 0
-autoanswer_tone = 0x32       ; autoanswer confirmation tone. For a complete list of tones: grep SKINNY_TONE sccp_protocol.h
-                             ; not all the tones can be played in a connected state, so you have to try.
-remotehangup_tone = 0x32     ; passive hangup notification. 0 for none
-transfer_tone = 0            ; confirmation tone on transfer. Works only between SCCP devices
+servername = LinuxMCE
+keepalive = 60
+debug = 1
+context = from-internal
+dateformat = D.M.Y
+bindaddr = 192.168.80.1
+port = 2000
+disallow=all
+allow=alaw
+allow=ulaw
+dnd = off
+firstdigittimeout = 30
+digittimeout = 8
+autoanswer_ring_time = 1
+autoanswer_tone = 0x32
+remotehangup_tone = 0x32
+transfer_tone = 0
+callwaiting_tone = 0x2d
+musicclass=default
+echocancel = on
+silencesuppression = off
+trustphoneip = no
+sccp_tos = 0x68
+sccp_cos = 4
+audio_tos = 0xB8
+audio_cos = 6
+video_tos = 0x88
+video_cos = 5
+private = on
+callanswerorder=oldestfirst
+protocolversion=17
+hotline_enabled=no
 
+;=========================================================================================
+;
+; device template definitions
+;
+;=========================================================================================
+[defaultdevice](!)
+type = device
+transfer = off
+park = on
+cfwdall = off
+cfwdbusy = off
+cfwdnoanswer = off
+dtmfmode = inband
 
-[devices]
+[7970](!,defaultdevice)
+devicetype = 7970
+transfer = off
+park = off
+cfwdall = off
 
+;=========================================================================================
+;
+; line template definitions
+;
+;=========================================================================================
+[defaultline](!)
+type = line
+context = from-internal
+incominglimit = 2
+transfer = off
+vmnum = 600
+meetme = on
+meetmeopts=qxd
+meetmenum=700
+trnsfvm = 1000
+secondary_dialtone_digits = 9
+secondary_dialtone_tone = 0x22
+musicclass=default
+language=de
+audio_tos = 0xB8
+audio_cos = 6
+video_tos = 0x88
+video_cos = 5
+echocancel = on
+silencesuppression = off
 
-[lines]
+;=========================================================================================
+;
+; actual definitions
+;
+;=========================================================================================
 
