--- a/ubuntu/asterisk/freepbx/root/etc/asterisk/sccp.conf
+++ b/ubuntu/asterisk/freepbx/root/etc/asterisk/sccp.conf
@@ -18,7 +18,7 @@ allow=alaw
 allow=ulaw
 dnd = off
 firstdigittimeout = 30
-digittimeout = 8
+digittimeout = 5
 autoanswer_ring_time = 1
 autoanswer_tone = 0x32
 remotehangup_tone = 0x32
@@ -58,6 +58,14 @@ devicetype = 7970
 transfer = off
 park = off
 cfwdall = off
+dtmfmode = inband
+
+[7910](!,defaultdevice)
+devicetype = 7910
+transfer = off
+park = off
+cfwdall = off
+dtmfmode = inband
 
 ;=========================================================================================
 ;
