--- a/src/TouchOrbiter/WindowsCE/Makefile
+++ b/src/TouchOrbiter/WindowsCE/Makefile
@@ -18,7 +18,7 @@ install-files:
 	fi
 	mkdir -p "$(DESTDIR)"
 	cp -af OrbiterCE/OrbiterCE.exe OrbiterCE/WaitCursor OrbiterCE/*.png OrbiterCE/OrbiterCE.ini "$(DESTDIR)"
-	cp zlib-1.2.5/zlib1.dll libpng-1.4.3/libpng14.dll jpeg-6b-src/src/jpeg-6b-src/jpeg62.dll "$(DESTDIR)"
+	cp zlib-1.2.5/zlib1.dll libpng-1.4.8/libpng14.dll jpeg-6b-src/src/jpeg-6b-src/jpeg62.dll "$(DESTDIR)"
 	find "$(DESTDIR)" -type d -name .svn -exec rm -rf '{}' ';' -prune
 
 cegcc-arm:
@@ -27,7 +27,7 @@ cegcc-arm:
 cegcc-x86:
 	make -f CEGCC.mk cegcc/build/x86mingw32ce/.compiled
 
-libs: zlib-1.2.5/zlib1.dll libpng-1.4.3/libpng14.dll jpeg-6b-src/src/jpeg-6b-src/jpeg62.dll
+libs: zlib-1.2.5/zlib1.dll libpng-1.4.8/libpng14.dll jpeg-6b-src/src/jpeg-6b-src/jpeg62.dll
 bins: OrbiterCE/OrbiterCE.exe
 
 OrbiterCE/OrbiterCE.exe:
@@ -39,11 +39,11 @@ zlib-1.2.5: zlib-1.2.5.tar.bz2
 zlib-1.2.5/zlib1.dll: zlib-1.2.5
 	cd zlib-1.2.5 && make -f ../zlib.mingw32ce.mk
 
-libpng-1.4.3: libpng-1.4.3.tar.bz2
-	tar -xjf libpng-1.4.3.tar.bz2 || (rm -rf $@ || /bin/false)
+libpng-1.4.8: libpng-1.4.8.tar.bz2
+	tar -xjf libpng-1.4.8.tar.bz2 || (rm -rf $@ || /bin/false)
 	touch $@
-libpng-1.4.3/libpng14.dll: libpng-1.4.3
-	cd libpng-1.4.3 && make -f ../libpng.mingw32ce.mk ZLIBINC=../zlib-1.2.5 ZLIBLIB=../zlib-1.2.5
+libpng-1.4.8/libpng14.dll: libpng-1.4.8
+	cd libpng-1.4.8 && make -f ../libpng.mingw32ce.mk ZLIBINC=../zlib-1.2.5 ZLIBLIB=../zlib-1.2.5
 
 jpeg-6b-src: jpeg-6b-src.tar.bz2
 	tar -xjf jpeg-6b-src.tar.bz2 || (rm -rf $@ || /bin/false)
@@ -53,20 +53,20 @@ jpeg-6b-src/src/jpeg-6b-src/jpeg62.dll: jpeg-6b-src
 	cd jpeg-6b-src/src && make -f ../release/Makefile compilation
 
 jpeg-6b-src.tar.bz2:
-	wget 'http://downloads.sourceforge.net/project/cegcc/ported%20packages/libjpeg-6b/jpeg-6b-src.tar.bz2?use_mirror=netcologne&ts=1279828424' \
+	wget -O $@ 'http://downloads.sourceforge.net/project/cegcc/ported%20packages/libjpeg-6b/jpeg-6b-src.tar.bz2?use_mirror=netcologne&ts=1279828424' \
 		|| (rm -f $@ && /bin/false)
 zlib-1.2.5.tar.bz2:
-	wget 'http://downloads.sourceforge.net/project/libpng/zlib/1.2.5/zlib-1.2.5.tar.bz2?use_mirror=ignum&ts=1279830004' \
+	wget -O $@ 'http://downloads.sourceforge.net/project/libpng/zlib/1.2.5/zlib-1.2.5.tar.bz2?use_mirror=ignum&ts=1279830004' \
 		|| (rm -f $@ && /bin/false)
-libpng-1.4.3.tar.bz2:
-	wget 'http://downloads.sourceforge.net/project/libpng/01-libpng-master/1.4.3/libpng-1.4.3.tar.bz2?use_mirror=mesh&ts=1279829417' \
+libpng-1.4.8.tar.bz2:
+	wget -O $@ 'http://downloads.sourceforge.net/project/libpng/libpng14/1.4.8/libpng-1.4.8.tar.bz2?ts=1317140217&use_mirror=ignum' \
 		|| (rm -f $@ && /bin/false)
 
 clean:
-	rm -rf zlib-1.2.5 libpng-1.4.3 jpeg-6b-src
+	rm -rf zlib-1.2.5 libpng-1.4.8 jpeg-6b-src
 	make -C OrbiterCE clean
 distclean: clean
-	rm -rf zlib-1.2.5* libpng-1.4.3* jpeg-6b-src*
+	rm -rf zlib-1.2.5* libpng-1.4.8* jpeg-6b-src*
 	rm -rf cegcc
 
 .PHONY: default cegcc libs bins install clean dist-clean
