Refs #1272 - Fixed MOH, correctly creates HM default routings

--- a/src/lmce-asterisk/root/etc/asterisk/extensions.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/extensions.conf
@@ -107,6 +107,12 @@ switch => Realtime
 [app-speakingclock]
 switch => Realtime
 
+[app-test-moh]
+exten => *96,1,Answer
+exten => *96,2,Wait(1)
+exten => *96,3,MusicOnHold()
+exten => *96,4,Hangup
+
 [app-dialvm]
 exten => *98,1,Answer
 exten => *98,n,Wait(1)
@@ -240,6 +246,7 @@ include => app-directory
 include => app-echo-test
 include => app-speakextennum
 include => app-speakingclock
+include => app-test-moh
 include => app-dialvm
 include => app-vmmain
 include => app-recordings
@@ -677,15 +684,15 @@ exten => s,105,Macro(outisbusy)
 
 [macro-dialout-trunk]
 exten => s,1,Set(DIAL_TRUNK=${ARG1})
-exten => s,n,Set(DIAL_NUMBER=${ARG2})
-exten => s,n,Set(ROUTE_PASSWD=${ARG3})
-exten => s,n,GotoIf($["${ROUTE_PASSWD}" = ""]?noauth) ; arg3 is pattern password
-exten => s,n(auth),Authenticate(${ROUTE_PASSWD})
-exten => s,n(noauth),GotoIf($["x${OUTDISABLE_${ARG1}}" = "xon"]?disabletrunk,1)
-exten => s,n,Set(_NODEST=)
-exten => s,n,Set(DIAL_TRUNK_OPTIONS=${DIAL_OPTIONS}) // will be reset to TRUNK_OPTIONS if not intra-company
-exten => s,n,Set(GROUP()=DIAL_TRUNK)
-exten => s,n,Macro(user-callerid,SKIPTTL)
+exten => s,2,Set(DIAL_NUMBER=${ARG2})
+exten => s,3,Set(ROUTE_PASSWD=${ARG3})
+exten => s,4,GotoIf($["${ROUTE_PASSWD}" = ""]?noauth) ; arg3 is pattern password
+exten => s,5(auth),Authenticate(${ROUTE_PASSWD})
+exten => s,6(noauth),GotoIf($["x${OUTDISABLE_${ARG1}}" = "xon"]?disabletrunk,1)
+exten => s,7,Set(_NODEST=)
+exten => s,8,Set(DIAL_TRUNK_OPTIONS=${DIAL_OPTIONS}) // will be reset to TRUNK_OPTIONS if not intra-company
+exten => s,9,Set(GROUP()=DIAL_TRUNK)
+exten => s,10,Macro(user-callerid,SKIPTTL)
 exten => s,n,Macro(record-enable,${CALLERID(number)},OUT)
 exten => s,n,GotoIf($["${INTRACOMPANYROUTE}" = "YES"]?skipoutcid) ;Set to YES if treated like internal
 exten => s,n,Set(DIAL_TRUNK_OPTIONS=${TRUNK_OPTIONS})
