--- a/src/lmce-asterisk/root/etc/asterisk/modules.conf
+++ b/src/lmce-asterisk/root/etc/asterisk/modules.conf
@@ -87,7 +87,7 @@ load => format_gsm.so                   ; Raw GSM data - Requires N/A
 ;load => format_mp3.so                  ; MP3 - Requires N/A
 ;load => format_pcm_alaw.so             ; Raw aLaw 8khz PCM Audio support - Requires N/A
 load => format_pcm.so                   ; Raw uLaw 8khz Audio support (PCM) - Requires N/A 
-;load => format_sln.so                  ; Raw Signed Linear Audio support (SLN) -  Requires N/A 
+load => format_sln.so                   ; Raw Signed Linear Audio support (SLN) -  Requires N/A 
 ;load => format_vox.so                  ; Dialogic VOX (ADPCM) File Format - Requires N/A 
 load => format_wav_gsm.so               ; Microsoft WAV format (Proprietary GSM) - Requires N/A 
 load => format_wav.so                   ; Microsoft WAV format (8000hz Signed Linear) - Requires N/A 
