--- a/src/lmce-asterisk/debian/control
+++ b/src/lmce-asterisk/debian/control
@@ -8,9 +8,9 @@ Standards-Version: 3.6.1
 Package: lmce-asterisk
 Architecture: any
 Pre-Depends: asterisk (>= 1:1.6.2~dfsg)
-Depends: php-db, pluto-boot-scripts, chan-sccp-b
+Depends: php-db, pluto-boot-scripts, chan-sccp-b, asterisk-sounds-extra
 Provides: asterisk-config-custom
-Conflicts: freepbx, pluto-asterisk, asterisk-pluto, asterisk-custom-config
+Conflicts: freepbx, asterisk-pluto, asterisk-custom-config
 Replaces: asterisk-config
 Description: lmce-asterisk
- lmce-asterisk
+ LinuxMCE Asterisk integration
